@@ -190,3 +190,5 @@
 6.16 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
 
 	* apps/examples/qencoder:  Add a quadrature driver test.
+	* apps/examples/ostest/fpu.c:  Add a test to verify that FPU registers
+	  are properly saved and restored on context switches.
